harness/test/errors/072_number_type_pred.eu
# Error test: using 'number?' type predicate which does not exist in eucalypt
x: 42
result: x number?
RESULT: result
